# VitOS

./: .gitignore  .gitmodules  Makefile  README.md
apps/oscomp-kernel/: Cargo.toml
apps/oscomp-kernel/src/: main.rs
crates/kernel/: Cargo.toml  build.rs
crates/kernel/src/: elf.rs  fd.rs  lib.rs  loader.rs  runner.rs  runtime.rs  testdisk.rs
crates/linux-abi/: Cargo.toml
crates/linux-abi/src/: lib.rs  syscall.rs
docs/: arceos-baseos-roadmap.md  stage0-bootstrap.md  stage1-minimal-app.md  stage2-loader-syscall-scaffold.md  stage3-basic-tests-analysis.md  syscall-table.md
scripts/: run-qemu-loongarch64.sh  run-qemu-riscv64.sh
user/hello/: README.md  linker.ld
user/hello/src/: main.rs
user/local-basic/src/: main.rs
