[package]
name = "oscomp-kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
axstd = { path = "../../third_party/arceos/ulib/axstd", optional = true }
vitos-kernel = { path = "../../crates/kernel" }

[features]
axstd = ["dep:axstd", "vitos-kernel/axstd"]

[target.'cfg(target_arch = "riscv64")'.dependencies]
axplat-riscv64-qemu-virt = "0.4.1"

[target.'cfg(target_arch = "loongarch64")'.dependencies]
axplat-loongarch64-qemu-virt = "0.4.2"
